# PTSummarizer

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: python-app.yml
notebook/: TextRank.ipynb
src/: form.py  main.py
src/ml/models/: train_model.py
src/parser/: get_data.py  parse_article.py
src/static/: fonts.css  style.css
src/templates/: summary.html
src/web/: form.py  forms.py  main.py  parse_article.py  routes.py
src/web/static/: fonts.css  style.css
src/web/templates/: home_page.html  index.html  summary.html
