[tool.poetry]
name = "ptsummarizer"
version = "0.1.0"
description = "Parses and creates text summary from the given URL."
authors = ["Victoria Lebedeva <vict1464@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
