[tool.poetry]
name = "ptsummarizer"
version = "0.1.0"
description = "Parses and creates text summary from the given URL."
authors = ["Victoria Lebedeva <vict1464@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
Flask-WTF = "^1.0.1"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
black = "^22.8.0"

mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
